Fix scrollbar showing in chrome browsers on the app-switcher-modal

--- a/stylesheets/components/app-switcher.scss
+++ b/stylesheets/components/app-switcher.scss
@@ -111,6 +111,8 @@ $app-switcher: map-merge-settings($app-switcher-default-settings, $app-switcher)
     @include modal($use-content-size: true);
 
     > div {
+      overflow: hidden !important;
+
       > header {
         text-align: center;
       }
